--- a/react/src/App.css
+++ b/react/src/App.css
@@ -25,7 +25,7 @@ h1 {
   font-family: 'Damion', cursive;
   /* color: #F38D68; */
   font-size: 50px;
-  color: #fff;
+  color: rgb(247, 74, 74);
   text-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
 }
 
@@ -157,4 +157,9 @@ input[type=text]:focus{
   opacity: 0.5;
   transition: 0.2s;
   border-radius: 25px;
+}
+
+.logo {
+  height: 50px;
+  width: 50px;
 }
