--- a/react/src/App.css
+++ b/react/src/App.css
@@ -82,6 +82,20 @@ button {
   box-shadow: 0 0 14px 0 #797986;
 }
 
+.pop-up {
+  /* animation: popup 400ms; */
+  animation: pop-up2 200ms;
+}
+
+@keyframes pop-up2 {
+  0% {
+    transform: scale(0.5);
+  } 100% {
+    transform: scale(1);
+  }
+}
+
+
 @keyframes popup {
   0% {
     transform: scale(0);
@@ -100,7 +114,7 @@ input[type=text]{
     border-radius:8px;
     margin: 0px;
     outline:none;
-    padding:15px;
+    padding:18px;
     box-sizing:border-box;
     transition:.3s;
     background-color: rgba(0, 0, 0, 0.13);
@@ -140,6 +154,9 @@ button:active {
   box-shadow: 0 0px rgba(153, 153, 153, 0.24);
   transform: translateY(2.5px);
   transition: all 0.2s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   outline: none;
   border: 0;
 }
