--- a/react/src/App.css
+++ b/react/src/App.css
@@ -37,7 +37,7 @@ h2 {
   width: 80vw;
   max-width: 260px;
   height: 300px;
-  box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
+  /* box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30); */
   border-radius: 20px;
   background-size: cover;
   background-position: center;
@@ -169,10 +169,14 @@ button:disabled{
   width: 200px;
 }
 
-.log2o {
+.logo2 {
   padding-top: 50px;
   padding-bottom: 50px;
   height: 60px;
   width: 200px;
   background-color: #858585;
+}
+
+._loading_overlay_overlay {
+  border-radius: 15px;
 }
