--- a/react/src/components/Swiping/Swiping.css
+++ b/react/src/components/Swiping/Swiping.css
@@ -40,7 +40,7 @@ h1 {
   width: 80vw;
   max-width: 260px;
   height: 300px;
-  box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
+  /* box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30); */
   border-radius: 20px;
   background-size: cover;
   background-position: center;
