--- a/react/src/App.css
+++ b/react/src/App.css
@@ -180,3 +180,23 @@ button:disabled{
 ._loading_overlay_overlay {
   border-radius: 15px;
 }
+
+.restaurantName {
+  padding: 6px;
+  background-color: rgba(0, 0, 0, 0.356);
+  border-radius: 10px;
+  color: white;
+  display: inline-block;
+}
+
+.restaurantPrice {
+
+}
+
+.restaurantRating {
+
+}
+
+.restaurantDistance {
+
+}
