--- a/react/src/components/TinderCard/TinderCard.css
+++ b/react/src/components/TinderCard/TinderCard.css
@@ -24,6 +24,11 @@ h1 {
   text-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
 }
 
+/* h3 {
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.397);
+} */
+
 .swipe {
   position: absolute;
 }
