--- a/react/src/App.css
+++ b/react/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  min-height: 100vh;
+  height: 85vh;
   overflow: hidden;
   /* background: linear-gradient(#fff, #999); */
   background: linear-gradient(#e66465, #9198e5);
