--- a/react/src/App.css
+++ b/react/src/App.css
@@ -15,6 +15,10 @@
   justify-content: center;
 }
 
+html, body {
+  overflow: hidden;
+}
+
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
