disable double tap to zoom on ios

--- a/react/src/react-swipeable-cards/css/App.css
+++ b/react/src/react-swipeable-cards/css/App.css
@@ -27,6 +27,7 @@
   -ms-flex-align: end;
   align-items: center;
   z-index: 1;
+  touch-action: manipulation;
 }
 .container .cards_container .card_container {
   /* display: inline-block;
