--- a/react/src/App.css
+++ b/react/src/App.css
@@ -15,11 +15,11 @@
   justify-content: center;
 }
 
-html, body {
+/* html, body {
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   touch-action: manipulation;
-}
+} */
 
 h2 {
   font-family: Arial, Helvetica, sans-serif;
