--- a/react/src/App.css
+++ b/react/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
   overflow: hidden;
   background: linear-gradient(#e66465, #9198e5);
 }
@@ -13,6 +13,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+html, body {
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  touch-action: manipulation;
 }
 
 h2 {
