--- a/react/src/App.css
+++ b/react/src/App.css
@@ -197,6 +197,7 @@ button:disabled{
   display: inline-block;
   /* position: absolute; */
   left: 0px;
+  pointer-events: none;
 }
 
 .restaurantRatingPrice {
@@ -209,6 +210,7 @@ button:disabled{
   position: absolute;
   left: 0px;
   bottom: 0px;
+  pointer-events: non
 }
 
 .restaurantDistance {
@@ -221,4 +223,5 @@ padding: 5px;
   position: absolute;
   right: 0px;
   bottom: 0px;
+  pointer-events: non
 }
