--- a/react/src/App.css
+++ b/react/src/App.css
@@ -36,6 +36,17 @@ h5 {
   margin-block-end: 0em;
 }
 
+.matchTitle {
+  font: 400 30px/1.3 'Pacifico', Helvetica, sans-serif;
+  color: #2b2b2b;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.31);
+  margin-bottom: 20px;
+}
+
+.matchName {
+  margin: 4px;
+}
+
 .main-page {
   display: flex;
   flex-direction: column;
@@ -173,7 +184,7 @@ button:disabled{
   color: white;
   display: inline-block;
   position: absolute;
-  left: 0px;
+  left: 6px;
   bottom: 0px;
   pointer-events: none;
 }
@@ -186,7 +197,7 @@ button:disabled{
   color: white;
   display: inline-block;
   position: absolute;
-  right: 0px;
+  right: 6px;
   bottom: 0px;
   pointer-events: none;
 }
