--- a/react/src/index.css
+++ b/react/src/index.css
@@ -2,14 +2,14 @@ body {
   margin: 0;
   font-family: 
     -apple-system, 
-    BlinkMacSystemFont, 
-    'Segoe UI', 
-    'Roboto', 
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
     'Oxygen',
-    'Ubuntu', 
-    'Cantarell', 
-    'Fira Sans', 
-    'Droid Sans', 
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
     'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,6 +17,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
